tests/analyze/task-mixed-carriers/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `result 't8 'x`, but found `task int`.
> 5 | 	try x = ok 1
       ^^^^^^^^^^^^

